--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <h4>
                 Finance Study Notes
               </h4>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://mikeyangg.github.io/assets/fin-notes.pdf" target="_blank">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://michaelyangg.github.io/assets/fin-notes.pdf" target="_blank">
                   <figure class="cc-effect"><img src="images/blog3.PNG" alt="Image"/>
                     <figcaption>
                       <div class="image-fade"><img src="images/note2.png" alt="ezc-logo"></div>
